cmake_minimum_required(VERSION 3.2)   # the minimal CMake version required
project(Ioana)                                    # the solution name
add_executable(Ioana tema1.cpp)                                                                                                                                 